# flytte

./: CODE_OF_CONDUCT.md  LICENSE  README.md
backend/: .gitignore
backend/drone_ros_ws/src/drone_app/: CMakeLists.txt  package.xml
backend/drone_ros_ws/src/drone_app/config/: config.yml
backend/drone_ros_ws/src/drone_app/config/drones/: parrot_bebop2.yml
backend/drone_ros_ws/src/drone_app/include/common/: BBox.hpp  Pose.hpp
backend/drone_ros_ws/src/drone_app/include/controller/: Drone.hpp  DronePool.hpp  Math.hpp  RegulatorUtil.hpp
backend/drone_ros_ws/src/drone_app/include/detector/gazebo/: GaussErrorGenerator.hpp  IErrorGenerator.hpp  StatisticalErrorGenerator.hpp  random.hpp
backend/drone_ros_ws/src/drone_app/launch/: drone_app.launch  test.launch  tests.launch
backend/drone_ros_ws/src/drone_app/scripts/: DroneEKF.py  DroneObserver.py  FusionUnit.py  RecognitionUnit.py  gazeboTracking.py  location_nn.py  orientation_nn.py  vector.py
backend/drone_ros_ws/src/drone_app/src/: BBox.cpp  Drone.cpp  DronePool.cpp  GaussErrorGenerator.cpp  Math.cpp  Pose.cpp  RegulatorUtil.cpp  StatisticalErrorGenerator.cpp  controller.cpp  gazeboDetector.cpp  gazeboImageSender.cpp
backend/drone_ros_ws/src/drone_app/test/: BBoxTest.cpp  DronePoolTest.cpp  DroneTest.cpp  MathUtilTest.cpp  PoseTest.cpp  RegulatorUtilTest.cpp
backend/drone_ros_ws/src/drone_app/test/manual/: commandsTest.cpp  errorGaussTest.cpp  errorStatisticalTest.cpp  gazeboTest.cpp
backend/drone_ros_ws/src/drone_app_msgs/: CMakeLists.txt  package.xml
backend/drone_ros_ws/src/drone_app_msgs/msg/: BBox.msg  BBoxArray.msg  Drone.msg  DroneArray.msg
backend/drone_ros_ws/src/drone_app_msgs/srv/: ANNs.srv
backend/simulation/: bebop2.drone  empty.world
frontend/: .gitignore  index.html
frontend/css/: style.css
frontend/js/: main.js
frontend/js/include/: jquery.wheel.js
